--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,71 @@
-/* You can add global styles to this file, and also import other style files */
+// Custom Theming for Angular Material
+// For more information: https://material.angular.dev/guide/theming
+
+// oscuro chimba
+@use '@angular/material' as mat;
+
+html {
+  color-scheme: light dark;
+  @include mat.theme((
+    color: mat.$violet-palette,
+    typography: Roboto,
+    density: 0
+  ));
+}
+
+// claro
+// @use '@angular/material' as mat;
+
+// html {
+//   @include mat.theme((
+//     color: (
+//       primary: mat.$violet-palette,
+//       tertiary: mat.$orange-palette,
+//       theme-type: light,
+//     ),
+//     typography: Roboto,
+//     density: 0
+//   ));
+// }
+
+
+// @use '@angular/material' as mat;
+
+// html {
+//   @include mat.theme((
+//     color: mat.$violet-palette,
+//     typography: (
+//       plain-family: Roboto,
+//       brand-family: Open Sans,
+//       bold-weight: 900,
+//       medium-weight: 500,
+//       regular-weight: 300,
+//     ),
+//     density: 0,
+//   ));
+// }
+
+// @use '@angular/material' as mat;
+
+// html {
+//   @include mat.theme((
+//     color: mat.$violet-palette,
+//     typography: Roboto,
+//     density: -2,
+//   ));
+// }
+
+html,
+body {
+  height: 100%;
+}
+
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  background: var(--mat-sys-surface);
+  color: var(--mat-sys-on-surface);
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
