--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="sidebar-container">
-  <div class="image-wrapper" *ngFor="let img of images">
+  <div class="image-wrapper" *ngFor="let img of images" (click)="onActionComponent(img)">
     <img [src]="img.src" alt="Sidebar image" />
     <div class="title">{{ img.title }}</div>
     <div class="description">{{ img.description }}</div>
