--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -10,8 +10,9 @@
   width: 100%;
   height: 103px;
   overflow: hidden;
-  border-radius: 8px;
+  border-radius: 4px;
   transition: height 1s ease;
+  cursor: pointer;
 
   img {
     width: 100%;
