Implement project architecture documentation, add authentication and machine management features, and refactor components for improved structure and maintainability.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -177,7 +177,7 @@
     <div class="example-sidenav-content">
       @if (showFilterImage) {
       <img [src]="'https://machine-app-test-1.s3.us-east-2.amazonaws.com/fondos/logo2.png'"
-        style="width: 100%; height: 100%;" alt="Sidebar image" (click)="drawer.toggle()">
+        style="width: 100%; height: 100%;" alt="Sidebar image">
       } @else {
       <div class="router-outlet">
         <router-outlet></router-outlet>
