--- a/src/app/feactures/maintenances/maintenances.component.html
+++ b/src/app/feactures/maintenances/maintenances.component.html
@@ -1,112 +1,76 @@
 <div class="mat-header-strong">
-    <h1 class="size-title">Gestión de Mantenimiento</h1>
+    <h1 class="size-title">Gestión de Mantenimientos</h1>
 </div>
 
-
 <div class="content-cards">
-    <div class="maintanance-container">
-        <mat-card class="chart-card" appearance="outlined">
-            <mat-card-header>
-                <div class="card-header-strong">
-                    <mat-form-field appearance="outline" class="custom-input">
-                        <input matInput placeholder="Buscar máquina" aria-label="Search">
-                        <mat-icon matSuffix>search</mat-icon>
-                    </mat-form-field>
-                </div>
-            </mat-card-header>
-            <mat-card-content class="">
-                <div class="mat-elevation-z8">
-                    <table mat-table [dataSource]="dataSourceMachine" class="mat-elevation-z8">
-                        <!-- Position Column -->
-                        <ng-container matColumnDef="model">
-                            <th mat-header-cell *matHeaderCellDef> Modelo </th>
-                            <td mat-cell *matCellDef="let element"> {{element.model}} </td>
-                        </ng-container>
+    <mat-card class="chart-card" appearance="outlined">
+        <mat-card-header>
+            <div class="card-header-strong">
+                <mat-form-field appearance="outline" class="custom-input">
+                    <input matInput placeholder="Buscar mantenimiento" (change)="onSearchChange($event)"
+                        aria-label="Search">
+                    <mat-icon matSuffix>search</mat-icon>
+                </mat-form-field>
+                <button class="button-agregar" (click)="actionMaintenance('add')" mat-button="filled">Agregar</button>
+            </div>
+        </mat-card-header>
+        <mat-card-content class="">
+            <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                    <!-- Position Column -->
+                    <ng-container matColumnDef="date">
+                        <th mat-header-cell *matHeaderCellDef> Fecha </th>
+                        <td mat-cell *matCellDef="let element"> {{element.date | date:'dd/MM/yyyy'}} </td>
+                    </ng-container>
 
-                        <!-- Name Column -->
-                        <ng-container matColumnDef="serie">
-                            <th mat-header-cell *matHeaderCellDef> Tipo </th>
-                            <td mat-cell *matCellDef="let element"> {{element.serie}} </td>
-                        </ng-container>
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="type">
+                        <th mat-header-cell *matHeaderCellDef> Tipo </th>
+                        <td mat-cell *matCellDef="let element"> {{TRADUCERTYPES[element.type]}} </td>
+                    </ng-container>
 
-                        <!-- Weight Column -->
-                        <ng-container matColumnDef="timeUse">
-                            <th mat-header-cell *matHeaderCellDef> Tiempo de uso </th>
-                            <td mat-cell *matCellDef="let element"> {{element.timeUse}} </td>
-                        </ng-container>
+                    <!-- Weight Column -->
+                    <ng-container matColumnDef="spareParts">
+                        <th mat-header-cell *matHeaderCellDef> Repuestos </th>
+                        <td mat-cell *matCellDef="let element"> {{element.spareParts}} </td>
+                    </ng-container>
 
-                        <tr mat-header-row *matHeaderRowDef="displayColunmMachines; sticky: true"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayColunmMachines;"></tr>
-                    </table>
+                    <!-- Weight Column -->
+                    <ng-container *ngIf="!istechenical" matColumnDef="technicianId">
+                        <th mat-header-cell *matHeaderCellDef> Técnico </th>
+                        <td mat-cell *matCellDef="let element"> {{element.technician}}</td>
+                    </ng-container>
 
-                </div>
-                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
-                    aria-label="Select page of periodic elements">
-                </mat-paginator>
-            </mat-card-content>
-        </mat-card>
+                    
+                    <ng-container matColumnDef="acciones">
+                        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+                        <td mat-cell *matCellDef="let element">
+                            <button mat-icon-button [matMenuTriggerFor]="menu">
+                                <mat-icon>more_vert</mat-icon>
+                            </button>
 
-        <mat-card class="chart-card" appearance="outlined">
-            <mat-card-header>
-                <div class="card-header-strong">
-                    <mat-form-field appearance="outline" class="custom-input">
-                        <input matInput placeholder="Buscar máquina" aria-label="Search">
-                        <mat-icon matSuffix>search</mat-icon>
-                    </mat-form-field>
-                    <button class="button-agregar" (click)="actionMaintenance('add')"
-                        mat-button="filled">Agregar</button>
-                </div>
-            </mat-card-header>
-            <mat-card-content class="">
-                <div class="mat-elevation-z8">
-                    <table mat-table [dataSource]="dataSourceMaintenance" class="mat-elevation-z8">
-                        <!-- Position Column -->
-                        <ng-container matColumnDef="data">
-                            <th mat-header-cell *matHeaderCellDef> Fecha </th>
-                            <td mat-cell *matCellDef="let element"> {{element.model}} </td>
-                        </ng-container>
-
-                        <!-- Name Column -->
-                        <ng-container matColumnDef="type">
-                            <th mat-header-cell *matHeaderCellDef> Tipo </th>
-                            <td mat-cell *matCellDef="let element"> {{element.serie}} </td>
-                        </ng-container>
-
-                        <!-- Weight Column -->
-                        <ng-container matColumnDef="tools">
-                            <th mat-header-cell *matHeaderCellDef> repuestos </th>
-                            <td mat-cell *matCellDef="let element"> {{element.timeUse}} </td>
-                        </ng-container>
-
-                        <ng-container matColumnDef="acciones">
-                            <th mat-header-cell *matHeaderCellDef> Acciones </th>
-                            <td mat-cell *matCellDef="let element">
-                                <button mat-icon-button [matMenuTriggerFor]="menu">
-                                    <mat-icon>more_vert</mat-icon>
+                            <mat-menu #menu="matMenu">
+                                <button mat-menu-item (click)="actionMaintenance('edit', element)">
+                                    <mat-icon>edit</mat-icon>
+                                    <span>Editar</span>
                                 </button>
+                                <button mat-menu-item (click)="deleteMaintenance(element)">
+                                    <mat-icon>delete</mat-icon>
+                                    <span>Eliminar</span>
+                                </button>
+                            </mat-menu>
+                        </td>
+                    </ng-container>
 
-                                <mat-menu #menu="matMenu">
-                                    <button mat-menu-item (click)="actionMaintenance('edit', element)">
-                                        <mat-icon>edit</mat-icon>
-                                        <span>Editar</span>
-                                    </button>
-                                    <button mat-menu-item (click)="deleteMaintenance(element)">
-                                        <mat-icon>delete</mat-icon>
-                                        <span>Eliminar</span>
-                                    </button>
-                                </mat-menu>
-                            </td>
-                        </ng-container>
 
-                        <tr mat-header-row *matHeaderRowDef="displayColunmMaintenance; sticky: true"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayColunmMaintenance;"></tr>
-                    </table>
+                    <tr mat-header-row *matHeaderRowDef="displayColunmMaintenance; sticky: true"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayColunmMaintenance;"></tr>
+                </table>
 
-                </div>
-                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
-                    aria-label="Select page of periodic elements">
-                </mat-paginator>
-            </mat-card-content>
-        </mat-card>
-    </div>
+            </div>
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+                aria-label="Select page of periodic elements">
+            </mat-paginator>
+        </mat-card-content>
+    </mat-card>
 </div>
