--- a/src/app/feactures/modals/machine/machine.component.html
+++ b/src/app/feactures/modals/machine/machine.component.html
@@ -10,12 +10,12 @@
 
             <mat-form-field appearance="outline">
                 <mat-label>Serie</mat-label>
-                <input matInput formControlName="serie" placeholder="Ej: XYZ123" />
+                <input matInput formControlName="serialNumber" placeholder="Ej: XYZ123" />
             </mat-form-field>
 
             <mat-form-field appearance="outline">
                 <mat-label>Horas de uso</mat-label>
-                <input matInput type="number" formControlName="timeUse" />
+                <input matInput type="number" formControlName="usageHours" />
             </mat-form-field>
 
             <mat-form-field appearance="outline">
