--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,3 +1,7 @@
+
+@import '../../styles.scss';
+
+
 .sidebar-container {
   display: flex;
   flex-direction: column;
@@ -55,7 +59,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    background: linear-gradient(to top, #151316 0%, transparent 100%);
+    background: linear-gradient(to top, $color-dark 0%, transparent 45%);
     pointer-events: none;
     z-index: 1;
   }
@@ -66,6 +70,7 @@
     img {
       transform: scale(1.05);
       height: 303px;
+      opacity: 0.5;
       cursor: pointer;
     }
 
