--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<style>
+<!-- <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
     --electric-violet: oklch(53.18% 0.28 296.97);
@@ -165,7 +165,7 @@
       margin-block: 1.5rem;
     }
   }
-</style>
+</style> -->
 
 <main class="main">
   <mat-drawer-container class="example-container" autosize="false">
