--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,6 +2,6 @@
   <div class="image-wrapper" *ngFor="let img of images" (click)="onActionComponent(img)">
     <img [src]="img.src" alt="Sidebar image" />
     <div class="title">{{ img.title }}</div>
-    <div class="description">{{ img.description }}</div>
+    <p class="description"><strong>{{ img.description }}</strong></p>
   </div>
 </div>
